# forecasting-tools

./: .cursorrules  .env.template  .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  conftest.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
.devcontainer/: devcontainer.json  postinstall.sh
.github/workflows/: hourly-run-main.yaml  hourly-run-template.yaml  hourly-run.yaml  pre-commit.yaml
code_tests/expensive_run_tests_individually/: test_ex_forecast_team.py  test_ex_niche_list_researcher.py
code_tests/low_cost_or_live_api_tests/: test_ai_model_interface.py  test_benchmarker.py  test_exa_model.py  test_forecast_database_manager.py  test_forecasting_bots.py  test_metaculus_api.py  test_models_incurring_cost.py  test_models_tracking_token_cost.py  test_smart_searcher.py  test_url_scraper.py
forecasting_tools/: __init__.py
forecasting_tools/ai_models/: claude35sonnet.py  exa_searcher.py
forecasting_tools/forecasting/: metaculus_api.py  team_manager.py
forecasting_tools/front_end/: Home.py
forecasting_tools/util/: file_manipulation.py
front_end/: Home.py
front_end/app_pages/: base_rate_page.py  benchmark_page.py  estimator_page.py  example_forecast_reports.json  example_forecasts.py  forecaster_page.py  key_factors_page.py  niche_list_researcher_page.py
scripts/: benchmark_forecast_bot.py  gather_saved_reports.py  republish_reports_from_today.py  run_base_rate.py  run_forecasts_for_ai_tournament.py  run_key_factors_on_tournamanet.py  run_morning_forecasts.py  show_saved_report_app.py  simulate_a_tournament.ipynb
(+237 files in other folders)
